<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="username">Username:</string>
    <string name="submit">SUBMIT</string>
    <string name="userprompt">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="passwordprompt">Please enter your password</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="confirmpasswordprompt">Please confirm your password</string>
</resources>
