<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.danielmenyhart.signupform.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/username" />

            <EditText
                android:id="@+id/userprompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/userprompt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordprompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/passwordprompt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:layout_gravity="fill"
                android:text="@string/confirmpassword" />

            <EditText
                android:id="@+id/confirmpasswordprompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/confirmpasswordprompt" />
        </LinearLayout>
</LinearLayout>

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/fields"
        android:layout_below="@id/fields"
        android:text="@string/submit"
        android:textSize="32sp" />

</RelativeLayout>
